--- a/assets/style.css
+++ b/assets/style.css
@@ -7,15 +7,17 @@
     background: #34d1b1;
 }
 
+body {
+    overflow-y: hidden;
+}
+
 nav.navbar {
     box-shadow: 0 4px 8px 0 rgba(0,209,178, 0.05), 0 6px 20px 0 rgba(0,209,178, 0.005);
 }
-
 .navbar-brand a.navbar-item {
     font-family: 'Pacifico', cursive;
     color: #00d1b2;
 }
-
 .navbar-burger {
     background: #F2F2F2;
 }
@@ -64,31 +66,71 @@ nav.navbar {
 
 .sidebar {
     height: 38.2em;
-    background: #00d1b2;
-    color: #fff;
+    background: #fff;
+    color: #424242;
     text-align: center;
+    box-shadow: 4px 0px 6px 0 rgba(0,0,0,0.1), 10px 0px 20px 0 rgba(0,0,0,0.1);
+    z-index: 10;
+}
+.sidebar-toggle {
+    float: right;
+    font-size: 2rem;
+    padding: 0 0.5rem;
+    margin: 0 0.5rem;
+    color: rgba(0,0,0,0.1);
 }
 .sidebar-header-img img {
     width: 12rem;
-    margin-top: 2rem;
     border-radius: 50%;
+    box-shadow: 0 4px 6px 0 rgba(0,0,0,0.1), 0 10px 20px 0 rgba(0,0,0,0.2); 
 }
 .sidebar-header-info-name {
     font-size: 1.5rem;
 }
 .sidebar-header-info-status .tag {
-    background: rgba(255,255,255,0.2);
-    color: #fff;
+    background: rgba(0,0,0,0.2);
+    color: #424242;
     border-radius: 25px;
 }
 .sidebar-menu-item {
-    width: 80%;
-    margin: 1rem;
+    width: 10rem;
+    margin: 1rem auto;
     padding: 0.2rem 1rem;
     font-size: 1.6rem;
     text-align: left;
     border-radius: 50px;
 }
 .sidebar-menu-item:hover {
-    background: rgba(255,255,255,0.2);
+    background: rgba(0,0,0,0.1);
+}
+.sidebar-menu-item.active {
+    color: #00d1b2;
+}
+
+.card-owl {
+    height: 20rem;
+    padding: 2rem;
+    border-radius: 15px;
+    background: #eee;
+    color: #212121;
+    font-size: 5rem;
+    box-shadow: 0 4px 6px 0 rgba(0,0,0,0.1), 0 10px 20px 0 rgba(0,0,0,0.2);
+}
+.owl-stage-outer {
+    padding: 2rem 0;
+}
+.exams {
+    padding: 2rem 0;
+}
+.exams-grid {
+    padding: 3rem;
+}
+.exam-box{
+    padding: 2rem;
+    margin: 0.5rem;
+    border-radius: 15px;
+    background: #000;
+    color: #fff;
+    font-size: 5rem;
+    text-align: center;
 }
