--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,12 @@ nav.navbar {
 .navbar-burger {
     background: #F2F2F2;
 }
+#nav-user-icon img{
+    width: 2rem;
+    margin: 0.45rem;
+    border-radius: 50%;
+    box-shadow: 0 2px 10px 0 rgba(0,0,0,0.1), 0 5px 10px 0 rgba(0,0,0,0.2);
+}
 
 .card-form{
     width: 35rem; 
@@ -72,7 +78,7 @@ nav.navbar {
     box-shadow: 4px 0px 6px 0 rgba(0,0,0,0.1), 10px 0px 20px 0 rgba(0,0,0,0.1);
     z-index: 10;
 }
-.sidebar-toggle {
+#sidebar-close {
     float: right;
     font-size: 2rem;
     padding: 0 0.5rem;
@@ -105,6 +111,31 @@ nav.navbar {
 }
 .sidebar-menu-item.active {
     color: #00d1b2;
+}
+
+
+@media(max-width: 768px) {
+    #user-sidebar {
+        height: 17rem;
+    }
+    .sidebar-header {
+        float: left;
+        margin: 0 2rem;
+    }
+    #sidebar-close {
+        float: left;
+        margin-left: -1rem;
+        margin-top: 0.5rem;
+    }
+    .sidebar-header-img img {
+        width: 8rem;
+        border-radius: 50%;
+        box-shadow: 0 4px 6px 0 rgba(0,0,0,0.1), 0 10px 20px 0 rgba(0,0,0,0.2);
+    }
+    .sidebar-menu {
+        float: left;
+    }
+
 }
 
 .card-owl {
