--- a/assets/style.css
+++ b/assets/style.css
@@ -29,12 +29,14 @@ body {
     overflow-y: hidden;
 }
 
+/* Navbar */
 nav.navbar {
     box-shadow: 0 4px 8px 0 rgba(0,209,178, 0.05), 0 6px 20px 0 rgba(0,209,178, 0.005);
 }
 .navbar-brand a.navbar-item {
     font-family: 'Pacifico', cursive;
     color: #00d1b2;
+    font-size: 1.2rem;
 }
 .navbar-burger {
     background: #F2F2F2;
@@ -45,6 +47,12 @@ nav.navbar {
     border-radius: 50%;
     box-shadow: 0 2px 10px 0 rgba(0,0,0,0.1), 0 5px 10px 0 rgba(0,0,0,0.2);
     cursor: pointer;
+}
+/* Navbar */
+
+/* Site Wide */
+.columns {
+    margin: -.75rem 0;
 }
 
 .card-form{
@@ -88,7 +96,9 @@ nav.navbar {
 .card-question {
     margin: 1rem;
 }
+/* Site Wide */
 
+/* User Sidebar */
 .sidebar {
     height: 38.2em;
     background: #fff;
@@ -158,7 +168,9 @@ nav.navbar {
     }
 
 }
+/* User Sidebar */
 
+/* Exams Tab */
 .card-owl {
     height: 20rem;
     border-radius: 15px;
@@ -192,3 +204,98 @@ nav.navbar {
     width: 100%;
     border-radius: 15px;
 }
+/* Exams Tab */
+
+/* Exam Pack  */
+#exam-pack-hero {
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.0), rgba(0,0,0, 0.6)), url('img/slide1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+}
+
+#exam-provider-box {
+    display: flex;
+    padding: 1rem;
+}
+#exam-pack-provider-info {
+    margin: 1rem;
+}
+#exam-pack-provider-name h2 {
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+#exam-pack-tags {
+    margin: 0.5rem 0;
+}
+#exam-pack-tags .tag {
+    border-radius: 15px;
+}
+#exam-pack-provider-image {
+    background: #fff;
+    border: .3rem solid #34d1b1;
+    border-radius: 50%;
+    width: 7rem;
+    height: 7rem;
+    margin: 1rem;
+}
+
+#exam-pack-sale {
+    text-align: center;
+}
+#exam-pack-meta {
+    margin: 1rem;
+    padding: .3rem;
+    text-align: center;
+}
+#exam-pack-meta .icon {
+    margin: .4rem;
+    font-size: 1.2rem;
+    color: #34d1b1;
+}
+#exam-pack-buy-button {
+    width: 70%;
+    font-size: 1.5rem;
+    background: #34d1b1;
+    color: #fff;
+    box-shadow: 0 4px 6px 0 rgba(52,209,177, .2), 0 14px 20px rgba(52,209,177, .2);
+    border: 0;
+}
+
+#review-card.card {
+    width: 20rem;
+    float: right;
+    background: #f8fafb;
+    border-radius: 4px;
+    box-shadow: none;
+}
+#review-card .card-header {
+    box-shadow: none;
+}
+#review-card .card-header-title {
+    font-size: 1.3rem;
+    font-weight: 400;
+}
+#review-card .card-content {
+    padding: 0 1.5rem 1rem 1.5rem;
+}
+#review-card label {
+    margin: .5rem 0;
+    font-weight: 500;
+}
+#review-card input[type=text] {
+    background: #e3e9ed;
+    border: none;
+    height: 4rem;
+    box-shadow: none;
+}
+#review-card input[type=submit] {
+    width: 100%;
+    font-weight: 100;
+    background: #00d1b2;
+}
+#review-card #rating-stars {
+    line-height: 2.7rem;
+}
+/* Exam Pack  */
