--- a/assets/style.css
+++ b/assets/style.css
@@ -52,6 +52,19 @@ nav.navbar {
     box-shadow: 0 2px 10px 0 rgba(0,0,0,0.1), 0 5px 10px 0 rgba(0,0,0,0.2);
     cursor: pointer;
 }
+
+nav progress#loading-page {
+    display: none;
+    position: absolute;
+    bottom: 0;
+    border-radius: 0 !important;
+    height: .2rem !important;
+    box-shadow: 0 4px 6px 0 rgba(52,209,177,0.2), 0 6px 10px 0 rgba(52,209,177,0.2);
+}
+nav progress#loading-page:indeterminate{
+    background-color: #fff;
+    background-image: linear-gradient(to right,#00d1b2 30%,#fff 30%);
+}
 /* Navbar */
 
 /* Site Wide */
