--- a/assets/style.css
+++ b/assets/style.css
@@ -248,7 +248,6 @@ nav progress#loading-page:indeterminate{
 
 /* Exam Pack  */
 #exam-pack-hero {
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.0), rgba(0,0,0, 0.6)), url('img/slide1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -429,3 +428,11 @@ nav progress#loading-page:indeterminate{
     width: 18rem;
 }
 /* Exam Pack  */
+
+/* Additional Classes */
+.show-cursor-pointer {
+    cursor: pointer;
+}
+/* Additional Classes */
+
+
